--- a/PDS_system/package.json
+++ b/PDS_system/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
     "ethers": "^6.8.0",
     "react": "^18.2.0",
@@ -18,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "sass": "^1.69.3"
   },
