--- a/PDS_system/package.json
+++ b/PDS_system/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
+    "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "sass": "^1.69.3"
