--- a/PDS_system/package.json
+++ b/PDS_system/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.15.0",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
