--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index",
-    "begin": "nodemon index"
+    "dev": "nodemon index"
   },
   "keywords": [],
   "author": "",
